--- a/src/main/resources/static/css/monstyle.css
+++ b/src/main/resources/static/css/monstyle.css
@@ -120,6 +120,7 @@ fieldset label{
 input[type=text],
 input[type=email],
 input[type=tel],
+input[type="number"],
 textarea,
 select{
 	width:100%;
